# symposion

./: .gitmodules  Cargo.lock.bak  Cargo.toml  LICENSE  README.md  Rocket.toml  it_harmonogram  it_harmonogram.save
src/: main.rs  util.rs
templates/: index.tera  quadtree.tera  voronoi.tera
web/: static
web/static/: assets  css  js  node_modules
